--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,17 +9,33 @@ on:
 
 # workflow tasks
 jobs:
-  generate:
-    name: Generate cross-platform builds
+  build:
+    name: Builds go application
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
+      - name: Checkout
         uses: actions/checkout@v2
-      - name: Generate build files
-        uses: thatisuday/go-cross-build@v1
+      - name: Setup Go
+        uses: actions/setup-go@v2
         with:
-            platforms: 'linux/amd64, darwin/amd64, windows/amd64'
-            package: 'SMBRsync'
-            name: 'program'
-            compress: 'true'
-            dest: 'dist'
+          go-version: 1.19
+      - name: Build for Windows
+        env:
+          GOOS: windows
+          GOARCH: amd64
+        run: go build -o main/smbrsync.exe
+      - name: Build for Linux
+        env:
+          GOOS: linux
+          GOARCH: amd64
+        run: go build -o main/smbrsync
+      - name: Build for MacOS
+        env:
+          GOOS: darwin
+          GOARCH: amd64
+        run: go build -o main/smbrsync
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-artifacts
+          path: main/
